<?xml version="1.0"?>
<package format="2">
  <name>emergency_handler</name>
  <version>1.12.0</version>
  <description>The emergency_handler package</description>
  <author email="shingo.takeuchi.2@tier4.jp">Shingo Takeuchi</author>
  <maintainer email="shingo.takeuchi.2@tier4.jp">Shingo Takeuchi</maintainer>
  <license>Apache 2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rostest</build_depend>
  <depend>autoware_msgs</depend>
  <depend>autoware_system_msgs</depend>
  <depend>autoware_health_checker</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>roslint</depend>  
  <export>
  </export>
</package>
