<?xml version="1.0"?>
<package format="2">
  <name>vector_map</name>
  <version>1.12.0</version>
  <description>The vector_map package</description>
  <maintainer email="syouji@axe.bz">syouji</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>vector_map_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
